syntax = "proto3";

option java_package = "com.dhimandasgupta.notemark.proto";
option java_multiple_files = true;

message User {
  string user_name = 1;
  string access_token = 2;
  string refresh_token = 3;
}